<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:background="@drawable/register_backg">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:importantForAutofill="yes"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:importantForAutofill="yes"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:importantForAutofill="yes"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/register_button"
        android:background="@color/purple_500"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/login_link"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/already_member_login"
        android:gravity="center"
        android:background="@color/purple_500"
        android:textColor="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:onClick="navigateToLogin" />
</LinearLayout>
